# merlin_api

./: .gitignore  README.md
.github/workflows/: build.yml
lambda/getMessages/: build.sh  getMessages.py  getMessages.py~  pyproject.toml
lambda/postMessage/: build.sh  postMessage.py  pyproject.toml
lambda/postMessage/src/postmessage/: postMessage.py
lambda/putMessage/: putMessage.py
