[project]
name = "getmessage"
version = "0.1.0"
description = ""
authors = [
    {name = "Greg Jones",email = "4853264+gregjones07ba@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "getmessage", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
